--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      <p>WhatsApp:8(789)-478-45-43</p>
-      <p> e-mail:knyagnaak@yandex.ru</p>
+      <a class="header-phone" href="tel:8(789)-478-45-43">WhatsApp:8(789)-478-45-43</a>
+      <a class="header-email" href="mailto:knyagnaak@yandex.ru" >e-mail:knyagnaak@yandex.ru</a>
 </div>
     </header>
 
@@ -19,11 +19,13 @@
       <div class="container">
       <h1 class="heading">Князева Александра</h1>
       <p>Junior верстальщик</p>
+      
       </div>
     </section>
 
     <section class="intro">
       <div class="container">
+        <figure class="user-image"><img src="files/user.jpg" width="928" height="536" alt="мое фото""></figure>
       <h2 class="subheading">Предоставляю услуги:</h2>
       <ul>Предосталяю услуги:
       <li>Дизайн и вертска сайта</li>
@@ -36,9 +38,11 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
+      <figure class="project-image"><img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома"></figure>
 
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
+      <a class="button" href="source/project/index.html">Посмотреть работу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
@@ -47,8 +51,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      <p>WhatsApp:8(789)-478-45-43 br</p>
-<p>e-mail:gudkova_v@gmail.com</p>
+        <a class="footer-phone" href="tel:8(789)-478-45-43">WhatsApp:8(789)-478-45-43</a>
+        <a class="footer-email" href="mailto:knyagnaak@yandex.ru" >e-mail:knyagnaak@yandex.ru</a>
 </div>
     </footer>
   </body>
